Added Ascii Table window

Improved Text Adventure features:
- Added location description texto to image, using AI <-- TODO fix this description
- Added configuration setting for char filter
- Added configuration settings for Text Adventure Map: follow, show unvisited, show unconnected, show objects, show pictures, zoom level
- Preserve zoom level on Text Adventure Map when loading games

Improved ZX Vision
- Allow to render only changed pixels (so it speeds up render). Internal flag: dirty_user_must_draw_contents
- Added more utf-8 characters (ï)
- Added action to put windows in cascade
- Process switcher can be set to immutable, so massive actions on menu Windows, like minimize all, cascade, etc, don't affect it

Improved ZX Desktop
- When switching to full screen and disable ZX Desktop, windows are restored after disabling full screen
- Allow to disable border and footer when switching to full screen


Improved ZX Spectrum Next emulation:
- Allow to boot NextZXOS v2.07l
- Updated machine id list

Fixed ZX Vision relocation windows
Fixed memory leak error when drawing aventure map
Fixed error when no permissions writing to mmc, ide, trd, dsk, hilow: disable persistent writes when it happens
Fixed permissions when installing ZEsarUX on Linux: zxuno.flash and tbblue.mmc are now writable by anyone
Fixed Text Adventure Graphics rendering invalid characters

* As always, there are some other minor bugfixes and improvements

----------------------------------------


Version 10.3 - La Abadia del Crimen edition. 10 May 2023

There are lots of changes in this version, but some of them are remarkable:
- Added machines Amstrad PCW 8256, PCW 8512, CPC 6128, CPC 664
- Fixed 3" CF2 floppy disk emulation (used on +3, CPC, PCW): the floppy disk emulation has been rewritten from scratch and now is near perfect
- Lots of improvements on Debug CPU window
- Fixed almost all annoying audio clicks on Windows version (and on SDL audio driver on Linux)

